--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "todo-list1125",
-  "version": "1.0.0",
+  "name": "htodo-list1125",
+  "version": "1.0.1",
   "description": "It is my Todo-list...",
   "main": "index.js",
   "type": "module",
