--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "htodo-list1125",
-  "version": "1.0.1",
+  "name": "todo-list-h1125m",
+  "version": "1.0.2",
   "description": "It is my Todo-list...",
   "main": "index.js",
   "type": "module",
